--- a/package.json
+++ b/package.json
@@ -3,6 +3,9 @@
   "version": "0.1.0",
   "private": true,
   "dependencies": {
+    "@prismicio/client": "^6.4.1",
+    "@prismicio/next": "^0.1.0",
+    "@prismicio/react": "^2.1.2",
     "@testing-library/jest-dom": "^5.14.1",
     "@testing-library/react": "^12.0.0",
     "@testing-library/user-event": "^13.2.1",
@@ -10,7 +13,9 @@
     "@types/node": "^16.7.13",
     "@types/react": "^17.0.20",
     "@types/react-dom": "^17.0.9",
+    "date-fns": "^2.28.0",
     "next": "^12.1.0",
+    "prismic-dom": "^2.2.7",
     "react": "^17.0.2",
     "react-dom": "^17.0.2",
     "react-icons": "^4.3.1",
@@ -46,6 +51,7 @@
     ]
   },
   "devDependencies": {
+    "@types/prismic-dom": "^2.1.1",
     "@types/styled-components": "^5.1.19"
   }
 }
