--- a/.vscode/settings.json
+++ b/.vscode/settings.json
@@ -7,6 +7,7 @@
     "Enviar",
     "Gerais",
     "Imagem",
+    "imgpost",
     "lado",
     "Localização",
     "mais",
@@ -15,6 +16,7 @@
     "perfil",
     "projetos",
     "publicações",
+    "titlecontent",
     "veja",
     "Visitar",
     "Visite",
